# THEKEY

./: .gitignore  BLOCKERS.md  BUILD_WEEK_CONTRIBUTION.es.md  BUILD_WEEK_CONTRIBUTION.md  CHANGELOG.md  CODEX_HANDOFF.md  CONTRIBUTING.en.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  JUDGES.md  LICENSE  PRIOR_ART.md  README.en.md  README.es.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  THEKEY_CONTRACT.md  THREAT_MODEL.en.md  THREAT_MODEL.md  err.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  good-first-issue.yml  governance_change.md
.github/workflows/: tests.yml
.thekey/: events.db  state-history.jsonl  state-transitions.jsonl  state.json  state.previous.json
artifacts/build-week/: FINAL_REPORT.json  FINAL_REPORT.md  (+2 more)
docs/: BUILD_WEEK_FUNCTION_MAP.md  BUILD_WEEK_IMPLEMENTATION_PLAN.md  BUILD_WEEK_NEW_WORK.md  CODEX_GPT56_USAGE.md  CODEX_SESSIONS.md  DEMO_SCRIPT_3_MINUTES.md  DEVPOST_DESCRIPTION.md  SUBMISSION_CHECKLIST.md  THEKEY_VISUAL_CONTRACT.md  discovery.md
docs/architecture/: README.md
phases/: phase-01-create-run.yaml  phase-02-baseline.yaml  phase-03-plan.yaml  phase-04-approve.yaml  phase-05a-prepare-workspace.yaml  phase-05b-apply-operation.yaml  phase-05c-generate-diff.yaml  phase-06-verify.yaml  phase-07-decide.yaml
prompts/: context-template.txt  cycle-protocol.txt  system-kernel.txt
release_evidence/: 01_demo_validation.md  02_readme_parity.md  03_threat_model_parity.md  04_ci_status.md  05_secret_review.md  06_clean_clone_windows_spaces.md  07_issue_backlog.md  08_publish_audit.md  launch_plan.md  rollback_plan.md
scripts/: bootstrap-and-demo.ps1  bootstrap.ps1  build-portable.ps1  build-week-demo.ps1  clean-demo.ps1  collect-preexisting-evidence.ps1  compare-build-week-visual.py  demo.ps1  extract-canonical-hero-decor.ps1  extract-canonical-mode-decor.ps1  extract-canonical-sidebar-decor.ps1  make_thelkey_guide_pdf.py  portable_entry.py  run-demo.ps1  verify-build-week-evidence.ps1  verify-pixel-ui.ps1
tests/: conftest.py  test_phase_b_rbac_v2_guard.py  test_phase_b_rbac_v2_integration.py  test_phase_b_rbac_v2_models.py
(+229 files in other folders)
