[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thekey-core-governed-run"
version = "0.2.0"
description = "THEKEY Core Governed Run - a lightweight engine for governed software changes with versioned policy, isolated workspaces, and verifiable evidence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "THEKEY Core Contributors" }]
keywords = ["governance", "orchestration", "policy", "evidence", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.0,<3.0",
    # Required by THEKEY's deterministic demo, which runs a unit-test gate as
    # part of its verification. Keeping pytest in the runtime deps lets the
    # mandated `pip install -e .` (no dev extras) reproduce a green demo from
    # a clean clone.
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
thekey = "thekey.cli:main"
# MiMo autonomous launcher: runs the governed pipeline end-to-end with
# automatic (non-interactive) approval and the MiMo actor profile.
thekey-mimo = "thekey.launchers.mimo_launcher:main"

[project.urls]
Homepage = "https://github.com/klssxx/THEKEY"
Repository = "https://github.com/klssxx/THEKEY"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
# tests/fixtures holds sample PROJECTS to be inspected by THEKEY (data), not
# THEKEY test modules. Their own test_*.py files must not be collected.
norecursedirs = ["tests/fixtures"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
